CWNew/force-app/main/default/objects/CW_Vehicle__c/CW_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Vehicle</label>
    <nameField>
        <label>Vehicle Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>