CWNew/force-app/main/default/objects/CW_Vehicle__c/fields/CW_Maker__c.field-meta.xml
<CustomField>
    <fullName>CW_Maker__c</fullName>
    <description>Select maker of the vehicle</description>
    <label>Maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tata Motors</fullName>
            </value>
            <value>
                <fullName>Mahindra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>