CWNew/force-app/main/default/objects/CW_Vehicle__c/fields/CW_Model__c.field-meta.xml
<CustomField>
    <fullName>CW_Model__c</fullName>
    <description>Stores the vehicle model</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>