CWNew/force-app/main/default/objects/CW_Vehicle__c/fields/CW_Variant__c.field-meta.xml
<CustomField>
    <fullName>CW_Variant__c</fullName>
    <label>Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Sleeper AC</fullName>
            </value>
            <value>
                <fullName>Non AC</fullName>
            </value>
            <value>
                <fullName>Sleeper Non AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>