CWNew/force-app/main/default/objects/CW_Vehicle__c/fields/CW_Vehicle_Layout__c.field-meta.xml
<CustomField>
    <fullName>CW_Vehicle_Layout__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Layout</label>
    <referenceTo>CW_Vehicle_Layout__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>