CWNew/force-app/main/default/objects/CW_Vehicle__c/fields/CW_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>CW_Vehicle_Type__c</fullName>
    <description>Select Vehicle Type</description>
    <label>Vehicle Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>