CWNew/force-app/main/default/objects/CW_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CW_Vehicle_Type__c</columns>
    <columns>CW_Maker__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>